--- a/设计模式/单例模式.md
+++ b/设计模式/单例模式.md
@@ -1,4 +1,7 @@
+# 单例模式
+
 ## 概念
+
 确保一个类只有一个实例<sup>[1] [2]</sup>，而且自行实例化并向整个系统提供这个实例<sup>[3]</sup>
 
 1. 确保一个类只有一个实例，就要求它的构造方法一定是不能为public公开的，即不能被外界实例化，所以构造方法只能是private
@@ -7,11 +10,6 @@
 
 如序列号生成器，计数器，还有创建一个对象需要消耗很多资源的话，如io，或者访问数据库(连接池)，也可使用单例模式减少资源消耗
 ```java
-public class SingletonPattern {
-    public static void main(String[] args) {
-        
-    }
-}
 class Singleton{
     //静态成员变量
     private static Singleton singleton;
@@ -292,18 +290,21 @@ public class Singleton6 implements Serializable {
 }
 ```
 **如何选用？**
-        枚举式  **好于**  饿汉式
-        静态内部类式 ** 好于** 懒汉式
-**常见应用场景**
-        windows的任务管理器
-        网站的计数器
-        数据库的连接池
-        Application容器也是单例
-        Spring中每个bean默认也是单例
-        Servlet中，每个servlet也是单例
 
+- 枚举式  **好于**  饿汉式
+- 静态内部类式 ** 好于** 懒汉式
+
+**常见应用场景**
+
+1. windows的任务管理器
+2. 网站的计数器
+3. 数据库的连接池
+4. Application容器也是单例
+5. Spring中每个bean默认也是单例
+6. Servlet中，每个servlet也是单例
 
 参考：
-[https://www.cnblogs.com/aeon/p/10212065.html](https://www.cnblogs.com/aeon/p/10212065.html)
-[https://www.cnblogs.com/meet/p/5116398.html](https://www.cnblogs.com/meet/p/5116398.html)
-五分钟学习设计模-单例模式[https://www.bilibili.com/video/BV1af4y1y7sS/](https://www.bilibili.com/video/BV1af4y1y7sS/?spm_id_from=333.788.videocard.2)
+
+- [https://www.cnblogs.com/aeon/p/10212065.html](https://www.cnblogs.com/aeon/p/10212065.html)
+- [https://www.cnblogs.com/meet/p/5116398.html](https://www.cnblogs.com/meet/p/5116398.html)
+- 五分钟学习设计模-单例模式[https://www.bilibili.com/video/BV1af4y1y7sS/](https://www.bilibili.com/video/BV1af4y1y7sS/?spm_id_from=333.788.videocard.2)
