--- a/大数据/ClickHouse/偶然间学习到的.md
+++ b/大数据/ClickHouse/偶然间学习到的.md
@@ -9,4 +9,4 @@ Bitmap字段类型，该类型扩展自AggregateFunction类型，字段类型定
 
 - State：获取聚合的中间计算结果
 - Merge：将中间计算结果进行合并计算，返回最终结果
-- MergeState：将中间计算结果迚行合合并计算，返回合并后的中间结果  
+- MergeState：将中间计算结果进行合合并计算，返回合并后的中间结果  
