--- a/Java基础/JVM/内存分配和垃圾收集.md
+++ b/Java基础/JVM/内存分配和垃圾收集.md
@@ -156,3 +156,8 @@ Sun JDK HotSpot虚拟机GC组合方式：
 
 ![](img/1616987053269-53af01bd-30de-4a1d-9765-62b637360a11.jpeg)
 
+参考：
+
+- 《深入理解Java虚拟机：JVM高级特性与最佳实践（第3版）》--周志明
+- JavaGuide
+
