--- a/必备书单.md
+++ b/必备书单.md
@@ -11,6 +11,9 @@
 1. 《Spring实战》
 2. 《Netty实战》
 
+## 架构
+1. 《凤凰架构》
+
 
 
 ## 大数据
@@ -18,6 +21,8 @@
 1. 《Hadoop权威指南》
 2. 《ClickHouse原理解析与应用实践》
 3. 《Kafka权威指南》
+4. 《阿里巴巴-大数据之路》
+
 
 
 
